Google fonts https

--- a/src/assets/scss/__fonts.scss
+++ b/src/assets/scss/__fonts.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto+Slab|Open+Sans|Montserrat|Bebas+Neue|Space+Mono:400italic,700italic,400,700);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Slab|Open+Sans|Montserrat|Bebas+Neue|Space+Mono:400italic,700italic,400,700);
 @import url(https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,800;0,900;1,600&display=swap);
 
 // Font Variables
